--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 
 	<scm>
-		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/cosmocode-distribution/trunk</developerConnection>
+		<developerConnection>scm:git:git@github.com:cosmocode/${project.artifactId}.git</developerConnection>
 	</scm>
 
 	<build>
