--- a/pom.xml
+++ b/pom.xml
@@ -1,59 +1,55 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <name>CosmoCode Distribution Configuration</name>
-
-  <groupId>de.cosmocode</groupId>
-  <artifactId>cosmocode-distribution</artifactId>
-  <version>1.1-SNAPSHOT</version>
-
-  <packaging>pom</packaging>
-
-  <scm>
-    <developerConnection>scm:git:git@github.com:cosmocode/${project.artifactId}.git</developerConnection>
-  </scm>
-
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh-external</artifactId>
-      </extension>
-    </extensions>
-  </build>
-
-  <distributionManagement>
-    <repository>
-      <id>cosmocode-public-releases</id>
-      <name>CosmoCode public releases</name>
-      <url>scpexe://mvn.cosmocode.de:6589/var/www/mvn/</url>
-    </repository>
-    <snapshotRepository>
-      <id>cosmocode-private-snapshots</id>
-      <name>CosmoCode private snapshots</name>
-      <url>http://mvn.cosmo/repository/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-  <profiles>
-    <profile>
-      <id>cosmocode-public-snapshots</id>
-      <distributionManagement>
-        <snapshotRepository>
-          <id>cosmocode-public-snapshots</id>
-          <name>CosmoCode public snapshots</name>
-          <url>scpexe://mvn.cosmocode.de:6589/var/www/mvn/</url>
-        </snapshotRepository>
-      </distributionManagement>
-    </profile>
-    <profile>
-      <id>cosmocode-private-releases</id>
-      <distributionManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <name>CosmoCode Distribution Configuration</name>
+    <groupId>de.cosmocode</groupId>
+    <artifactId>cosmocode-distribution</artifactId>
+    <version>1.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <scm>
+        <developerConnection>scm:git:git@github.com:cosmocode/${project.artifactId}.git</developerConnection>
+    </scm>
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+                <version>2.4</version>
+            </extension>
+        </extensions>
+    </build>
+    <distributionManagement>
         <repository>
-          <id>cosmocode-private-releases</id>
-          <name>CosmoCode private releases</name>
-          <url>http://mvn.cosmo/repository/internal</url>
+            <id>cosmocode-public-releases</id>
+            <name>CosmoCode public releases</name>
+            <url>scpexe://mvn.cosmocode.de:6589/var/www/mvn/</url>
         </repository>
-      </distributionManagement>
-    </profile>
-  </profiles>
+        <snapshotRepository>
+            <id>cosmocode-private-snapshots</id>
+            <name>CosmoCode private snapshots</name>
+            <url>http://mvn.cosmo/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <profiles>
+        <profile>
+            <id>cosmocode-public-snapshots</id>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>cosmocode-public-snapshots</id>
+                    <name>CosmoCode public snapshots</name>
+                    <url>scpexe://mvn.cosmocode.de:6589/var/www/mvn/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>cosmocode-private-releases</id>
+            <distributionManagement>
+                <repository>
+                    <id>cosmocode-private-releases</id>
+                    <name>CosmoCode private releases</name>
+                    <url>http://mvn.cosmo/repository/internal</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
