--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <name>CosmoCode Distribution Configuration</name>
     <groupId>de.cosmocode</groupId>
     <artifactId>cosmocode-distribution</artifactId>
-    <version>1.1.0</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <scm>
         <developerConnection>scm:git:git@github.com:cosmocode/${project.artifactId}.git</developerConnection>
